syntax = "proto3";

package chat;


import "user/user_inputs.proto";
import "user/user.proto";

import "error_reply.proto";
import "nats_metadata.proto";

// NATS Specific messages that are used internally on the server-side. 

// ********** User_Hearbeat ********** //
// Backend NATS messaging for persisting user hearbeat 
message NatsUserHeartbeatRequest {
  repeated MetadataMap headers = 1;
  UserHeartbeatRequest data = 2;
}

message NatsUserCreateResponse {
  oneof msg {
    User data = 1;
    ErrorReply error = 2;
  }
}

// ********** User_Create ********** //
// Backend NATS messaging for `User_Create`: Request to create a new chat 
message NatsUserCreateRequest {
  repeated MetadataMap headers = 1;
  UserCreateRequest data = 2;
}


// ********** User_Delete ********** //
// Backend NATS messaging for `User_Delete`: Deletes a chat 
message NatsUserDeleteRequest {
  repeated MetadataMap headers = 1;
  UserDeleteRequest data = 2;
}
